chore: make docker compose fully work and few fix's

--- a/Services/FrontApi/appsettings.Development.json
+++ b/Services/FrontApi/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Host=localhost; Database=boilde_fw; Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
+    "DbConnection": "Host=db; Database=postgres;Database=postgres; User ID=postgres;Password=postgres;   Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
   },
   "ENABLE_SWAGGER": true,
   "ElasticsearchSettings": {
