--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -19,14 +19,15 @@ services:
       - "8000:8000"
     volumes:
       - ~/.aspnet/https:/https:ro
-
-  serviceDiscovery:
-    image: steeltoeoss/eureka-server
-    hostname: eureka-server
-    networks:
-      - gateway_network
-    ports:
-      - "8761:8761"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
   rabbitmq:
     image: rabbitmq:management
     container_name: rabbitmq
@@ -36,6 +37,11 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 5s
+      timeout: 20s
+      retries: 5
     networks:
       - gateway_network
   db:
@@ -44,7 +50,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-      POSTGRES_DB: boilde_fw
+      POSTGRES_DB: postgres
     ports:
       - "5432:5432"
     networks:
@@ -82,6 +88,11 @@ services:
       - local_es:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "9200"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
 volumes:
   pgdata:
