chore: add frontend elements into the System prep for github action works

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 7.0.x
-  dashboard-backend:
+  front-api-service:
     runs-on: ubuntu-latest
-    name: Dashboard Backend Validation & Build
+    name: Front Api Validation & Build
     needs: [dotnet-setup]
     strategy:
       matrix:
