--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: nrwl/nx-set-shas@v3
-      - run: cd ${{ github.workspace }}/frontend && npm ci
+      - run: npm i -G yarn
+      - run: cd ${{ github.workspace }}/frontend && yarn install --frozen-lockfile
       - run: cd ${{ github.workspace }}/frontend && npx nx format:check
       - run: cd ${{ github.workspace }}/frontend && npx nx affected -t lint --parallel=3
       - run: cd ${{ github.workspace }}/frontend && npx nx affected -t test --parallel=3 --configuration=ci
