--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -34,11 +34,8 @@ yarn-error.log
 testem.log
 /typings
 
-# System Files
-.DS_Store
-Thumbs.db
-
 # Playwright
 **/test-results
 **/playwright-report
 **/playwright/.cache
+!.yarn/releases/yarn-*.cjs
