--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@nxext/vue": "^16.7.0",
     "@playwright/test": "^1.32.1",
     "nx": "16.7.2",
-    "playwright": "^1.32.1"
+    "playwright": "^1.32.1",
+    "prettier": "^3.0.3"
   },
   "engines": {
     "node": ">=v18"
