chore: update more work on the issue

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "prettier": "^3.0.3"
   },
   "engines": {
-    "node": ">=v18"
+    "node": ">=v18",
+    "npm": "please use yarn",
+    "yarn": ">=1.22.10",
+    "pnpm": "please use yarn"
   },
   "dependencies": {}
 }
