--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,12 +74,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: cd ${{ github.workspace }}/frontend
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
+          cache-dependency-path: ${{ github.workspace }}/frontend/yarn.lock
   frontend-platforms:
     name: Frontend Platforms Lint & Build
     needs: [node-setup]
