--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": ">=v18"
+    "node": ">=v18",
+    "npm": "please use yarn",
+    "yarn": ">=1.22.10",
+    "pnpm": "please use yarn"
   }
 }
