--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+          cache: "npm"
           cache-dependency-path: ${{ github.workspace }}/frontend/yarn.lock
   frontend-platforms:
     name: Frontend Platforms Lint & Build
@@ -94,10 +94,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: c-hive/gha-yarn-cache@v2
+      - name: Cache npm dependencies
+        uses: actions/cache@v2
+        with:
+          path: "~/.npm"
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - uses: nrwl/nx-set-shas@v3
       - name: Install JS dependencies
-        run: cd ${{ github.workspace }}/frontend && yarn install --frozen-lockfile
+        run: cd ${{ github.workspace }}/frontend && npm ci
       - name: running nx operations
         run: cd ${{ github.workspace }}/frontend && npx nx format:check
       - run: cd ${{ github.workspace }}/frontend && npx nx affected -t lint --parallel=3
