--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Cache npm dependencies
         uses: actions/cache@v2
         with:
-          path: "~/.npm"
+          path: ${{ github.workspace }}/frontend
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
