--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,8 @@ jobs:
       - name: Install JS dependencies
         run: cd ${{ github.workspace }}/frontend && npm ci
       - name: running nx operations
-        run: cd ${{ github.workspace }}/frontend && npx nx format:check
-      - run: cd ${{ github.workspace }}/frontend && npx nx affected -t lint --parallel=3
-      - run: cd ${{ github.workspace }}/frontend && npx nx affected -t test --parallel=3 --configuration=ci
-      - run: cd ${{ github.workspace }}/frontend && npx nx affected -t build --parallel=3
+        run: |
+          cd ${{ github.workspace }}/frontend 
+          npx nx affected -t lint --parallel=3
+          npx nx affected -t test --parallel=3 --configuration=ci
+          npx nx affected -t build --parallel=3
