--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -79,6 +79,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "npm"
+          cache-dependency-path: ${{ github.workspace }}/frontend/package-lock.json
   frontend-platforms:
     name: Frontend Platforms Lint & Build
     needs: [node-setup]
@@ -93,10 +95,19 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Cache npm dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/frontend
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - uses: nrwl/nx-set-shas@v3
-      - run: npm i -G yarn
-      - run: cd ${{ github.workspace }}/frontend && yarn install --frozen-lockfile
-      - run: cd ${{ github.workspace }}/frontend && npx nx format:check
-      - run: cd ${{ github.workspace }}/frontend && npx nx affected -t lint --parallel=3
-      - run: cd ${{ github.workspace }}/frontend && npx nx affected -t test --parallel=3 --configuration=ci
-      - run: cd ${{ github.workspace }}/frontend && npx nx affected -t build --parallel=3
+      - name: Install JS dependencies
+        run: cd ${{ github.workspace }}/frontend && npm ci
+      - name: running nx operations
+        run: |
+          cd ${{ github.workspace }}/frontend 
+          npx nx affected -t lint --parallel=3
+          npx nx affected -t test --parallel=3 --configuration=ci
+          npx nx affected -t build --parallel=3
