--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -122,7 +122,7 @@ jobs:
           echo "Deployment is running"
 
   develop-build-image-front-api-service:
-    name: Register Docker Images Backend as Package
+    name: Register Docker Images front-api as Package
     runs-on: ubuntu-latest
     needs: [deployment]
     permissions:
@@ -160,7 +160,7 @@ jobs:
       - name: Build and push Docker image on dashboard backend
         uses: docker/build-push-action@v4
         with:
-          context: ${{ github.workspace }}/backend
+          context: ./backend
           file: frontApi.Dockerfile
           push: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/develop'}}
           tags: ${{ steps.backend-meta.outputs.tags }}
