--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -160,8 +160,8 @@ jobs:
       - name: Build and push Docker image on dashboard backend
         uses: docker/build-push-action@v4
         with:
-          context: {{defaultContext}}:backend
-          file: ${{ github.workspace }}/frontApi.Dockerfile
+          context: ${{defaultContext}}:backend
+          file: frontApi.Dockerfile
           push: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/develop'}}
           tags: ${{ steps.backend-meta.outputs.tags }}
           labels: ${{ steps.backend-meta.outputs.labels }}
