--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -160,7 +160,7 @@ jobs:
       - name: Build and push Docker image on dashboard backend
         uses: docker/build-push-action@v4
         with:
-          context: ${{defaultContext}}:backend
+          context: ./backend
           file: frontApi.Dockerfile
           push: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/develop'}}
           tags: ${{ steps.backend-meta.outputs.tags }}
