--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,13 +1,10 @@
 name: Develop workflow CD
-
 on:
   push:
-    branches: ["develop", "cd-ci-develop"]
-
+    branches: ["develop"]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   Run-CI:
     runs-on: ubuntu-latest
@@ -112,19 +109,10 @@ jobs:
           npx nx affected -t test --parallel=3 --configuration=ci
           npx nx affected -t build --parallel=3
 
-  deployment:
-    name: Perp Docker Images
-    runs-on: ubuntu-latest
-    needs: [Run-CI]
-    steps:
-      - name: Run CI
-        run: |
-          echo "Deployment is running"
-
-  develop-build-image-front-api-service:
+  build-image-front-api-service:
     name: Register Docker Images front-api as Package
     runs-on: ubuntu-latest
-    needs: [deployment]
+    needs: [Run-CI]
     permissions:
       contents: read
       packages: write
