--- a/backend/Services/FrontApiRealTime/FrontApiRealTime.csproj
+++ b/backend/Services/FrontApiRealTime/FrontApiRealTime.csproj
@@ -8,17 +8,24 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5"/>
+        <PackageReference Include="MassTransit" Version="8.1.0"/>
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.0"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="7.0.11"/>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Redis" Version="1.1.5"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Serilog" Version="3.0.1"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <Content Include="..\..\..\.dockerignore">
             <Link>.dockerignore</Link>
         </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\Application\Application.csproj"/>
+        <ProjectReference Include="..\..\Processor\Processor.csproj"/>
     </ItemGroup>
 
 </Project>
