--- a/backend/Services/DevopsTools/appsettings.Development.json
+++ b/backend/Services/DevopsTools/appsettings.Development.json
@@ -4,5 +4,49 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DbConnection": "Host=localhost; Database=localhost;Database=postgres;Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;",
+    "DockerDbConnection": "Host=db; Database=localhost;Database=postgres; User ID=postgres;Password=postgres;   Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
+  },
+  "ENABLE_SWAGGER": true,
+  "ElasticsearchSettings": {
+    "uri": "http://localhost:9200",
+    "defaultIndex": "indexlogs",
+    "username": "elastic",
+    "password": ""
+  },
+  "ElasticApm": {
+    "SecretToken": "",
+    "ServerUrl": "http://localhost:9200",
+    "ServiceName": "SearchDB",
+    "CaptureBody": "all",
+    "LogLevel": "Debug"
+  },
+  "RabbitMqSettings": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "Enabled": true,
+    "UseRemoteHostOnDev": true
+  },
+  "Auth0": {
+    "Domain": "pcg-dev.eu.auth0.com",
+    "Audience": "backend-services",
+    "SigningKey": "pa3H4NfJU7cGPn7i9sfl6gIVI4R3YnO4"
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Front Api Health Check",
+        "Uri": "http://localhost:5082/healthz"
+      }
+    ],
+    "Webhooks": [],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  },
+  "RedisConnection": "localhost:6379/0"
 }
