--- a/backend/Services/DevopsTools/appsettings.json
+++ b/backend/Services/DevopsTools/appsettings.json
@@ -5,5 +5,43 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DbConnection": "Host=localhost; Database=postgres; User ID=postgres;Password=postgres; Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
+  },
+  "AllowedHosts": "*",
+  "ENABLE_SWAGGER": true,
+  "ElasticsearchSettings": {
+    "uri": "http://localhost:9200",
+    "defaultIndex": "indexlogs",
+    "username": "elastic",
+    "password": ""
+  },
+  "ElasticApm": {
+    "SecretToken": "",
+    "ServerUrl": "http://localhost:9200",
+    "ServiceName": "SearchDB",
+    "CaptureBody": "all",
+    "LogLevel": "Debug"
+  },
+  "RabbitMqSettings": {
+    "Host": "",
+    "Port": 5672,
+    "Username": "",
+    "Password": "",
+    "VirtualHost": "",
+    "Enabled": true,
+    "UseRemoteHostOnDev": false
+  },
+  "RedisConnection": "localhost:6379/0",
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Front Api Health Check",
+        "Uri": "http://localhost:5082/healthz"
+      }
+    ],
+    "Webhooks": [],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  }
 }
