--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -150,7 +150,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
-      
+
       # build and compile
       - name: Restore dependencies
         run: cd ${{ github.workspace }}/backend/Services/FrontApi && dotnet restore
@@ -161,7 +161,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./backend
-          file: backend/frontApi.CI.Dockerfile
+          file: backend/Services/FrontApi/frontApi.CI.Dockerfile
           push: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/develop'}}
           tags: ${{ steps.backend-meta.outputs.tags }}
           labels: ${{ steps.backend-meta.outputs.labels }}
