--- a/backend/Application/Application.csproj
+++ b/backend/Application/Application.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.11" />
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+        <PackageReference Include="Microsoft.Extensions.HealthChecks" Version="1.0.0"/>
       <PackageReference Include="NEST" Version="7.17.5" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
