--- a/backend/Services/FrontApi/appsettings.Development.json
+++ b/backend/Services/FrontApi/appsettings.Development.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Host=db; Database=postgres;Database=postgres; User ID=postgres;Password=postgres;   Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
+    "DbConnection": "Host=localhost; Database=localhost;Database=postgres;Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;",
+    "DockerDbConnection": "Host=db; Database=localhost;Database=postgres; User ID=postgres;Password=postgres;   Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
   },
   "ENABLE_SWAGGER": true,
   "ElasticsearchSettings": {
@@ -31,6 +32,17 @@
     "VirtualHost": "/",
     "Enabled": true,
     "UseRemoteHostOnDev": true
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Local Front Api Health Check",
+        "Uri": "http://localhost:5082/healthz"
+      }
+    ],
+    "Webhooks": [],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   },
   "Auth0": {
     "Domain": "pcg-dev.eu.auth0.com",
