--- a/backend/Services/FrontApiRealTime/appsettings.Development.json
+++ b/backend/Services/FrontApiRealTime/appsettings.Development.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Host=localhost; Database=postgres; User ID=postgres;Password=postgres; Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
+    "DbConnection": "Host=localhost; Database=localhost;Database=postgres;Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;",
+    "DockerDbConnection": "Host=db; Database=localhost;Database=postgres; User ID=postgres;Password=postgres;   Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
   },
   "ENABLE_SWAGGER": true,
   "ElasticsearchSettings": {
@@ -36,6 +37,11 @@
     "Domain": "",
     "Audience": "",
     "SigningKey": ""
+  },
+  "Auth0": {
+    "Domain": "pcg-dev.eu.auth0.com",
+    "Audience": "backend-services",
+    "SigningKey": "pa3H4NfJU7cGPn7i9sfl6gIVI4R3YnO4"
   },
   "RedisConnection": "localhost:6379/0"
 }
