--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     container_name: front-api-container
     build:
       context: .
-      dockerfile: ./frontApi.dev.Dockerfile
+      dockerfile: ./Services/FrontApi/frontApi.dev.Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - RabbitMqSettings:Host=rabbitmq
