--- a/backend/Processor/Processor.csproj
+++ b/backend/Processor/Processor.csproj
@@ -2,11 +2,10 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-        <LangVersion>12</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
+
 
     <ItemGroup>
       <ProjectReference Include="..\Application\Application.csproj" />
@@ -17,7 +16,7 @@
     <ItemGroup>
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.0" />
       <PackageReference Include="MediatR" Version="12.1.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-rc.1.23419.6"/>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     </ItemGroup>
 
 
