chore: many changes for the mssql db

--- a/backend/Services/FrontApi/appsettings.json
+++ b/backend/Services/FrontApi/appsettings.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Host=localhost; Database=postgres; User ID=postgres;Password=postgres; Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
+    "DbConnection": "Server=localhost;Database=platform;User Id=sa;Password=developer123!;;MultipleActiveResultSets=true"
   },
+  "ExtractDockerConnection": false,
   "ENABLE_SWAGGER": true,
   "ElasticsearchSettings": {
     "uri": "http://localhost:9200",
