--- a/backend/Services/FrontApi/appsettings.Development.json
+++ b/backend/Services/FrontApi/appsettings.Development.json
@@ -7,9 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Host=localhost; Database=localhost;Database=postgres;Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;",
-    "DockerDbConnection": "Host=db; Database=localhost;Database=postgres; User ID=postgres;Password=postgres;   Port=5432; Pooling=true; MinPoolSize=0; MaxPoolSize=100; Timeout=15; CommandTimeout=300; PersistSecurityInfo=True;"
+    "DbConnection": "Server=localhost;Database=platform;User Id=developer;Password=user123!;;MultipleActiveResultSets=true",
+    "DockerDbConnection": "Server=db;Database=platform;User Id=developer;Password=developer123!;MultipleActiveResultSets=true"
   },
+  "ExtractDockerConnection": false,
   "ENABLE_SWAGGER": true,
   "ElasticsearchSettings": {
     "uri": "http://localhost:9200",
