--- a/backend/docker-compose.base.yml
+++ b/backend/docker-compose.base.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.8"
 
 services:
   front-api-service:
@@ -28,6 +28,34 @@ services:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
+
+  db:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=${Sa_Password:-password123}
+      - MSSQL_PID=Developer
+    command: /bin/bash ./entrypoint.sh
+    ports:
+      - 1433:1433
+    volumes:
+      - sqlserver_data:/var/opt/mssql
+      - ./Tools/Db/entrypoint.sh:/entrypoint.sh
+      - ./Tools/Db/db-init.sh:/db-init.sh
+      - ./Tools/Db/db-init.sql:/db-init.sql
+    restart: always
+    depends_on:
+      - sqlserver.configurator
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${Sa_Password:-Passw0rd} -Q 'SELECT 1' || exit 1",
+        ]
+      interval: 10s
+      retries: 10
+      start_period: 10s
+      timeout: 3s
   rabbitmq:
     image: rabbitmq:management
     container_name: rabbitmq
@@ -44,25 +72,6 @@ services:
       retries: 5
     networks:
       - gateway_network
-  db:
-    image: postgres:15-alpine
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
-    ports:
-      - "5432:5432"
-    networks:
-      - gateway_network
-    user: postgres
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 1s
-      timeout: 3s
-      retries: 30
-    volumes:
-      - pgdata:/var/lib/postgresql/data
   redis:
     image: redis:7
     restart: always
@@ -95,7 +104,7 @@ services:
       retries: 5
 
 volumes:
-  pgdata:
+  sqlserver_data:
     driver: local
   local_es:
     driver: local
