--- a/backend/docker-compose.qa.yml
+++ b/backend/docker-compose.qa.yml
@@ -25,6 +25,9 @@ services:
     extends:
       file: docker-compose.base.yml
       service: db
+    environment:
+      - SA_PASSWORD=developer123!
+      - ACCEPT_EULA=Y
   rabbitmq:
     hostname: rabbitmq
     extends:
