--- a/backend/Services/FrontApi/appsettings.json
+++ b/backend/Services/FrontApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Database=platform;User Id=sa;Password=developer123!;;MultipleActiveResultSets=true"
+    "DbConnection": "Server=localhost;Database=platform;User Id=sa;Password=developer123!;;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "ExtractDockerConnection": false,
   "ENABLE_SWAGGER": true,
