--- a/backend/docker-compose.qa.yml
+++ b/backend/docker-compose.qa.yml
@@ -47,7 +47,7 @@ services:
       service: elasticsearch
 
 volumes:
-  pgdata:
+  sqlserver_data:
     driver: local
   local_es:
     driver: local
