--- a/backend/Services/FrontApi/FrontApi.csproj
+++ b/backend/Services/FrontApi/FrontApi.csproj
@@ -9,10 +9,10 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.ApplicationStatus" Version="7.0.0"/>
-        <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="7.0.0"/>
+        <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="7.0.0"/>
         <PackageReference Include="AspNetCore.HealthChecks.UI" Version="7.0.2"/>
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="7.1.0"/>
-        <PackageReference Include="AspNetCore.HealthChecks.UI.PostgreSQL.Storage" Version="7.0.0"/>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.SqlServer.Storage" Version="7.0.0"/>
         <PackageReference Include="MassTransit" Version="8.1.0" />
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
