--- a/backend/Services/FrontApi/appsettings.Development.json
+++ b/backend/Services/FrontApi/appsettings.Development.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Database=platform;User Id=developer;Password=user123!;;MultipleActiveResultSets=true",
-    "DockerDbConnection": "Server=db;Database=platform;User Id=developer;Password=developer123!;MultipleActiveResultSets=true"
+    "DbConnection": "Server=localhost;Database=platform;User Id=developer;Password=user123!;;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "MigratorDbConnection": "Server=localhost;Database=platform;User Id=migrator;Password=developer123!;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "DockerDbConnection": "Server=db;Database=platform;User Id=developer;Password=developer123!;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "ExtractDockerConnection": false,
   "ENABLE_SWAGGER": true,
