--- a/backend/docker-compose.base.yml
+++ b/backend/docker-compose.base.yml
@@ -30,32 +30,24 @@ services:
         condition: service_healthy
 
   db:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    build:
+      context: .
+      dockerfile: MSSQL.Dockerfile
+    user: root
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=${Sa_Password:-password123}
-      - MSSQL_PID=Developer
-    command: /bin/bash ./entrypoint.sh
+      ACCEPT_EULA: Y
+      SA_PASSWORD: developer123!
     ports:
       - 1433:1433
     volumes:
-      - sqlserver_data:/var/opt/mssql
-      - ./Tools/Db/entrypoint.sh:/entrypoint.sh
-      - ./Tools/Db/db-init.sh:/db-init.sh
-      - ./Tools/Db/db-init.sql:/db-init.sql
+      - db_data:/var/opt/mssql
     restart: always
-    depends_on:
-      - sqlserver.configurator
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${Sa_Password:-Passw0rd} -Q 'SELECT 1' || exit 1",
-        ]
+      test: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "developer123!" -Q "SELECT 1" || exit 1
       interval: 10s
-      retries: 10
-      start_period: 10s
       timeout: 3s
+      retries: 10
+      start_period: 40s
   rabbitmq:
     image: rabbitmq:management
     container_name: rabbitmq
@@ -104,7 +96,7 @@ services:
       retries: 5
 
 volumes:
-  sqlserver_data:
+  db_data:
     driver: local
   local_es:
     driver: local
