chore: add basic user interface

--- a/backend/Services/FrontApi/appsettings.Development.json
+++ b/backend/Services/FrontApi/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Database=platform;User Id=developer;Password=user123!;;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "DbConnection": "Server=localhost;Database=platform;User Id=developer;Password=user123!;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "MigratorDbConnection": "Server=localhost;Database=platform;User Id=migrator;Password=developer123!;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "DockerDbConnection": "Server=db;Database=platform;User Id=developer;Password=developer123!;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
