--- a/backend/Domain/Domain.csproj
+++ b/backend/Domain/Domain.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="FluentValidation" Version="11.7.1" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0-rc.1.23421.29"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-rc.1.23419.6"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.0-rc.1.23419.6"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.1.23419.6">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,12 +23,6 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Serilog" Version="3.0.1" />
-    </ItemGroup>
-
-
-
-    <ItemGroup>
-      <Folder Include="Migrations\sql\" />
     </ItemGroup>
 
 
