--- a/backend/Services/FrontApi/appsettings.json
+++ b/backend/Services/FrontApi/appsettings.json
@@ -9,6 +9,18 @@
   "ConnectionStrings": {
     "DbConnection": "Server=localhost;Database=platform;User Id=sa;Password=developer123!;;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:5082",
+          "http://localhost:5081",
+          "http://localhost:5083"
+        ],
+        "ValidIssuer": "application-api-security"
+      }
+    }
+  },
   "ExtractDockerConnection": false,
   "ENABLE_SWAGGER": true,
   "ElasticsearchSettings": {
