chore: update for the auth system

--- a/backend/Services/FrontApi/appsettings.json
+++ b/backend/Services/FrontApi/appsettings.json
@@ -44,5 +44,10 @@
     "VirtualHost": "",
     "Enabled": true,
     "UseRemoteHostOnDev": false
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:5082/",
+    "Audience": "http://localhost:5082/",
+    "Key": "secret key.'"
   }
 }
