chore: update for better logic for the user system

--- a/backend/Services/FrontApi/appsettings.Development.json
+++ b/backend/Services/FrontApi/appsettings.Development.json
@@ -12,6 +12,7 @@
     "DockerDbConnection": "Server=db;Database=platform;User Id=developer;Password=developer123!;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "ExtractDockerConnection": false,
+  "Disable_HealthCheck": true,
   "ENABLE_SWAGGER": true,
   "ElasticsearchSettings": {
     "uri": "http://localhost:9200",
