--- a/backend/Services/FrontApi/appsettings.json
+++ b/backend/Services/FrontApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Database=platform;User Id=sa;Password=developer123!;;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DbConnection": "Server=localhost;Database=platform;User Id=developer;Password=user123!;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "MigratorDbConnection": "Server=localhost;Database=platform;User Id=migrator;Password=developer123!;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Authentication": {
     "Schemes": {
@@ -23,6 +24,7 @@
   },
   "ExtractDockerConnection": false,
   "ENABLE_SWAGGER": true,
+  "Disable_HealthCheck": false,
   "ElasticsearchSettings": {
     "uri": "http://localhost:9200",
     "defaultIndex": "indexlogs",
@@ -46,8 +48,21 @@
     "UseRemoteHostOnDev": false
   },
   "Jwt": {
-    "Issuer": "http://localhost:5082/",
-    "Audience": "http://localhost:5082/",
-    "Key": "secret key.'"
+    "issuer": "http://localhost:5082/",
+    "audience": "http://localhost:5082/",
+    "secret": "secret key.",
+    "accessTokenExpiration": 3600,
+    "refreshTokenExpiration": 86400
+  },
+  "SmsSettings": {
+    "AccountIdentification": "",
+    "AccountMessagingServiceSid": "",
+    "AccountAuthToken": "",
+    "AccountFrom": ""
+  },
+  "EmailSettings": {
+    "ApiKey": "",
+    "SenderEmail": "",
+    "SenderName": ""
   }
 }
