--- a/backend/Services/FrontApi/FrontApi.csproj
+++ b/backend/Services/FrontApi/FrontApi.csproj
@@ -15,6 +15,8 @@
         <PackageReference Include="AspNetCore.HealthChecks.UI" Version="7.0.2"/>
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="7.1.0"/>
         <PackageReference Include="AspNetCore.HealthChecks.UI.SqlServer.Storage" Version="7.0.0"/>
+        <PackageReference Include="FluentValidation" Version="11.7.1"/>
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
         <PackageReference Include="MassTransit" Version="8.1.0" />
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0-rc.1.23421.29"/>
@@ -40,6 +42,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\Application\Application.csproj"/>
         <ProjectReference Include="..\..\Domain\Domain.csproj"/>
+        <ProjectReference Include="..\..\Infrastructure\Infrastructure.csproj"/>
         <ProjectReference Include="..\..\Processor\Processor.csproj"/>
     </ItemGroup>
 
